Package: R.rsp
==============

Version: 0.18.3 [2014-05-27]
o Now rscript() can write to file and does so by default.
o Now metadata 'source', which is a reference to the source of the
  RSP document, is set whenever possible/known.  It is considered
  a "local" metadata attribute, meaning it will not be part of any
  generated source code scripts, because those should be the same
  regardless of where the source is located.
o Bumped up package dependencies.


Version: 0.18.2 [2014-05-24]
o Using R.utils::use() instead of require() in more places.
o CLEANUP: Dropped internal ununsed vignette engines.
o Bumped up package dependencies.


Version: 0.18.1 [2014-05-17]
o Now using withCapture() in vignettes replacing alias evalCapture().
o USABILITY: The error messages thrown on RSP code chunks with syntax
  errors now also display the beginning and the end of the actual code
  chunk making it easier to identify/locate it.
o CLEANUP: Now rspWeave() and hence the 'rsp::rsp' vignette engine
  cleans up intermediate files (e.g. Markdown and TeX) produced while
  compiling the vignette into its final output (HTML or PDF).
o Bumped up package dependencies.


Version: 0.18.0 [2014-05-07]
o CLEANUP: R.oo package is no longer attached when attaching this package.


Version: 0.17.3 [2014-05-05]
o rfile() now assumes an RSP document when it cannot infer the type from
  the filename etc.


Version: 0.17.2 [2014-05-02]
o CLEANUP: Removed evalWithEcho(), which has been deprecated since 2011.
o Using R.utils::use() instead of library() in more RSP documents.


Version: 0.17.1 [2014-04-30]
o Added vignette engine 'R.rsp::asis' to include static PDFs and HTMLs.
o DOCUMENTATION: Restructured and updated the R.rsp vignettes.


Version: 0.17.0 [2014-04-29]
o Now suggested packages are installed automagically, iff needed.
  This minimizes the need for preinstalling packages whenever using
  R.rsp to compile documents.


Version: 0.16.0 [2014-04-18]