@@ -144,7 +144,7 @@ setMethodS3("getType", "RspProduct", function(object, default=NA_character_, as=
 #   @seeclass
 # }
 #*/#########################################################################
-setMethodS3("getMetadata", "RspProduct", function(object, name=NULL, local=TRUE, ...) {
+setMethodS3("getMetadata", "RspProduct", function(object, name=NULL, local=FALSE, ...) {
   res <- getAttribute(object, "metadata");
   if (!local) {
     isLocal <- is.element(names(res), "source");
