@@ -146,7 +146,7 @@ setMethodS3("getType", "RspString", function(object, default=NA, as=c("text", "I
 #   @seeclass
 # }
 #*/#########################################################################
-setMethodS3("getMetadata", "RspString", function(object, name=NULL, local=TRUE, ...) {
+setMethodS3("getMetadata", "RspString", function(object, name=NULL, local=FALSE, ...) {
   res <- getAttribute(object, "metadata", default=list());
   if (!local) {
     isLocal <- is.element(names(res), "source");
