@@ -2,7 +2,8 @@ Package: R.rsp
 ==============
 
 Version: 0.18.3 [2014-05-27]
-o Now rscript() can write to file and does so by default.
+o Now rscript() can write to file and if the input is a file, then
+  it does so by default.
 o Now metadata 'source', which is a reference to the source of the
   RSP document, is set whenever possible/known.  It is considered
   a "local" metadata attribute, meaning it will not be part of any
